# WaterCarver

./: README.md
StadiumForWaterCarver/: CMakeLists.txt  Makefile  groth_test.go  interface.go
StadiumForWaterCarver/config/: config
StadiumForWaterCarver/src/: Cipher_elg.cpp  Cipher_elg.h  CurvePoint.cpp  ElGammal.cpp  Functions.cpp  Functions.h  Globals.h  GoApis.cpp  Pedersen.cpp  Pedersen.h  Permutation.cpp  Permutation.h  Prover_toom.cpp  RemoteShuffler.cpp  RemoteShuffler.h  Utils.cpp  Utils.h  VerifierClient.cpp  Verifier_toom.cpp  WaterCarver.cpp  WaterCarver.h  ed.c  func_pro.cpp  keys.h  multi_expo.cpp  test.cpp
core/state/: journal.go
core/types/: transaction.go  transaction_signing.go
ctcrypto/: verifiableShuffle.go
ctcrypto/crypto/: const.go  keccak_test.go  key.go  merkle.go
ctcrypto/crypto/ringct/: bulletproof_regulation.go  bulletproof_regulation_test.go  order_test.go  range_test.go
ctcrypto/shuffle/: GoApis.h  cgoBridge.go
go-ethereum/: benchmarkCT.sh
go-ethereum/accounts/abi/bind/backends/: simulated.go
go-ethereum/cmd/cttransaction/: main.go
go-ethereum/core/: state_transition.go
go-ethereum/core/state/: state_object.go  statedb.go
go-ethereum/core/types/: gen_tx_json.go
go-ethereum/core/vm/: errors.go  interface.go
go-ethereum/ctcrypto/: commitment.go  commitment_test.go  gen_commitmentProof_json.go  gen_individualProof_json.go  verifiableShuffle_test.go
go-ethereum/ctcrypto/benchmark/: benchmark_test.go
go-ethereum/ctcrypto/crypto/: edwards_25519_group.go  keccak.go  multiexp.go  multiexp_test.go
go-ethereum/ctcrypto/crypto/ringct/: basic.go  bulletproof.go  bulletproof_fast.go  bulletproof_test.go  bulletproof_ultrafast.go  const.go  key.go  mlsag.go  range.go  ringct.go  ringct_full.go  ringct_simple.go
go-ethereum/ctcrypto/shuffle/: cgoBridge_test.go
go-ethereum/params/: protocol_params.go
